add docker file and docker compose

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "starlette>=0.46.2",
     "uvicorn>=0.34.2",
+    "pymilvus>=2.4.10",
+    "google-generativeai>=0.8.5",
 ]
