--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,9 @@ dependencies = [
     "uvicorn>=0.34.2",
     "pymilvus>=2.4.10",
     "google-generativeai>=0.8.5",
+    "starlette",
+    "asyncpg",           
+    "PyJWT",             
+    "bcrypt",            
+    "python-dotenv",     
 ]
